configuration/nginx/nginx-middleware-add-trailing-slash.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-add-trailing-slash
  namespace: nginx
spec:
  redirectRegex:
    regex: ^.*/nginx$
    replacement: /nginx/
