configuration/nginx/nginx-middleware-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-stripprefix
  namespace: nginx
spec:
  stripPrefix:
    prefixes:
      - /nginx
