configuration/nginx/nginx-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-lb
  namespace: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
