configuration/nginx/nginx-ingressroute-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    run: nginx  
  name: nginx
  namespace: nginx
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/`)
    services:
    - kind: Service
      namespace: nginx
      name: nginx
